--- a/package.json
+++ b/package.json
@@ -31,5 +31,13 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.3.6"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fontsource-variable/lexend": "^5.0.4",
+		"class-variance-authority": "^0.6.1",
+		"clsx": "^1.2.1",
+		"lucide-svelte": "^0.258.0",
+		"tailwind-merge": "^1.13.2",
+		"tailwindcss-animate": "^1.0.6"
+	}
 }
