--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"class-variance-authority": "^0.6.1",
 		"clsx": "^1.2.1",
 		"lucide-svelte": "^0.258.0",
+		"shiki": "^0.14.3",
 		"tailwind-merge": "^1.13.2",
 		"tailwindcss-animate": "^1.0.6"
 	}
