--- a/package.json
+++ b/package.json
@@ -39,9 +39,12 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource-variable/lexend": "^5.0.4",
+		"@jsdevtools/rehype-toc": "^3.0.2",
 		"class-variance-authority": "^0.6.1",
 		"clsx": "^1.2.1",
 		"lucide-svelte": "^0.258.0",
+		"rehype-slug": "^5.1.0",
+		"remark-toc": "^8.0.1",
 		"shiki": "^0.14.3",
 		"tailwind-merge": "^1.13.2",
 		"tailwindcss-animate": "^1.0.6"
