--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@iconify/icons-devicon": "^1.2.13",
+		"@iconify/icons-logos": "^1.2.33",
 		"@iconify/icons-mdi": "^1.2.46",
+		"@iconify/icons-skill-icons": "^1.2.1",
 		"@iconify/svelte": "^3.1.4",
 		"@rgossiaux/svelte-headlessui": "^2.0.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
