--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 	"dependencies": {
 		"@fontsource-variable/lexend": "^5.0.4",
 		"@jsdevtools/rehype-toc": "^3.0.2",
+		"blurhash": "^1.1.5",
 		"class-variance-authority": "^0.6.1",
 		"clsx": "^1.2.1",
 		"lucide-svelte": "^0.258.0",
