--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource-variable/fira-code": "^5.0.4",
 		"@fontsource-variable/lexend": "^5.0.4",
 		"@jsdevtools/rehype-toc": "^3.0.2",
 		"blurhash": "^1.1.5",
