--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"blurhash": "^1.1.5",
 		"class-variance-authority": "^0.6.1",
 		"clsx": "^1.2.1",
+		"dayjs": "^1.11.9",
 		"lucide-svelte": "^0.258.0",
 		"radix-svelte": "^0.8.0",
 		"rehype-slug": "^5.1.0",
