--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@fontsource-variable/fira-code": "^5.0.4",
-		"@fontsource-variable/lexend": "^5.0.4",
+		"@fontsource-variable/inter": "^5.0.17",
+		"@fontsource/mononoki": "^5.0.7",
 		"@jsdevtools/rehype-toc": "^3.0.2",
 		"class-variance-authority": "^0.6.1",
 		"clsx": "^1.2.1",
